Atualiza informativo e estilos

--- a/informativo.html
+++ b/informativo.html
@@ -20,13 +20,13 @@
                 <h3><span class="dot" style="background: var(--primary);"></span>Escolher Layout</h3>
                 <div class="button-group">
                     <button id="btnFlex" onclick="setMode('flex')" class="btn active-flex">FlexBox</button>
-                    <button id="btnGrid" onclick="setMode('grid')" class="btn ">Grid</button>
+                    <button id="btnGrid" onclick="setMode('grid')" class="btn">Grid</button>
                 </div>
             </section>
             <section class="controls-card">
                 <h3><span class="dot" style="background: #94a3b8;"></span>Resumo do Comportamento</h3>
                 <div id="statusInfo">
-                    <p id="txtAxis" style="margin: 5px 0; font-weight: 600;">Unidimensional</p>
+                    <p id="txtAxis" style="margin: 5px 0; font-weight: 600;">Unidimencional</p>
                     <p id="txtIdeal" style="margin: 0; font-size: 0.85rem; color: var(--text-muted);">O layout é calculado item a item. Ótimo para distribuir espaço em uma linha</p>
                 </div>
             </section>
